css basics modified

--- a/cssbasics.html
+++ b/cssbasics.html
@@ -11,7 +11,27 @@
     <h3>Heading 3</h3>
     <h2>Heading 2 -2</h2>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, ex cum illo quisquam quasi nemo sint modi voluptate? A quidem rem nihil illo explicabo qui quod optio magnam delectus debitis?</p>
+    <div class="firstdiv">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span>Velit, ex cum illo</span> quisquam quasi nemo sint modi voluptate? A quidem rem nihil illo explicabo qui quod optio magnam delectus debitis?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, ex cum illo quisquam quasi nemo sint modi voluptate? A quidem rem nihil illo explicabo qui quod optio magnam delectus debitis?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, <span>adipisicing elit. Velit, ex</span> cum illo quisquam quasi nemo sint modi voluptate? A quidem rem nihil illo explicabo qui quod optio magnam delectus debitis?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, ex cum illo quisquam quasi nemo sint modi voluptate? A quidem rem nihil illo explicabo qui quod optio magnam delectus debitis?</p>
+    </div>
+
+    <div>
+        <h1>Heading 1</h1>
+        <h4>Heading 4</h4>
+    </div>
+
+    <p id="myparagraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam et saepe eligendi doloribus error voluptates facilis, perferendis ab qui laudantium quod sint, nobis recusandae ipsam? Possimus error dolorem eum voluptates.</p>
+
+    <div class="seconddiv">
+        <p id="secondparagraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae laboriosam eveniet magni, praesentium iste minus nobis? Iste nulla vel error veritatis, alias optio fugiat aspernatur perferendis! Neque consequatur officia atque.
+        </p>
+    </div>
+
+    <!-- selector - class and ids -->
     
 </body>
 </html>
